[package]
name = "renefetcher"
version = "0.1.0"
authors = ["Phong Nguyen <phongnt.ptnk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.5"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "2.0"
toml = "0.5"
clap = "2.33"
postgres = "0.17"